more pages, tweaks

--- a/src/content/docs/en/api/10_getting-started/prelaunch-checklist.mdx
+++ b/src/content/docs/en/api/10_getting-started/prelaunch-checklist.mdx
@@ -26,7 +26,7 @@ sidebar-label: Pre-Launch Checklist
    MAX controls the refresh rate to give you optimal results.
    If you hide the banner behind content, <Glossary>networks</Glossary> will invalidate impressions based on their <Glossary>viewability</Glossary> rules.
    To learn more about banners and <Glossary>MRECs</Glossary>, see
-   the Banner &amp; MREC Ads pages for your platform.
+   the Banner & MREC Ads pages for your platform.
 1. If you do not use MAX Unity Integration Manager, review the Preparing Mediated Networks page for your platform and use the Mediation Debugger feature to validate that you have all of the necessary configurations for each network.
 
 <Callout type="warning">
