--- a/src/content/docs/en/api/15_max-dashboard/40_account/40_payments.mdx
+++ b/src/content/docs/en/api/15_max-dashboard/40_account/40_payments.mdx
@@ -86,7 +86,7 @@ From this page, you can view detailed payment information and can download payme
 Your current earnings may not appear in your <UILabel>History</UILabel> page for up to several business days after the end of the month.
 </Callout>
 
-![Payment &amp; Earnings History. Payments tab. Payments History. Table: Approval date, Amount Submitted, Payment Method, Status, Download confirmation button. Export to Excel button.](/images/payments-03.png)
+![Payment & Earnings History. Payments tab. Payments History. Table: Approval date, Amount Submitted, Payment Method, Status, Download confirmation button. Export to Excel button.](/images/payments-03.png)
 
 ## Frequently Asked Questions
 
