--- a/src/content/docs/en/api/15_max-dashboard/50_using-the-dashboard/50_how-to-find-your-applovin-sdk-version.mdx
+++ b/src/content/docs/en/api/15_max-dashboard/50_using-the-dashboard/50_how-to-find-your-applovin-sdk-version.mdx
@@ -14,7 +14,7 @@ You will find these lines in the device log:
 ```plaintext
 ========================================
 AppLovin SDK
-Version: <var>X</var>.<var>XX</var>.<var>X</var>
+Version: «X».«XX».«X»
 ```
 
 ## Native Android
