--- a/src/content/docs/en/api/20_demand-partners/10_demand-side-platforms/20_dsp-reporting.mdx
+++ b/src/content/docs/en/api/20_demand-partners/10_demand-side-platforms/20_dsp-reporting.mdx
@@ -20,9 +20,7 @@ https://r.applovin.com/report
 
 ### Example Final <Abbr>URL</Abbr>
 
-```
-https://r.applovin.com/report?api_key=<var>api-key</var>&start=2017-05-01&end=2017-05-01&report_type=dsp_report&columns=platform,country,impressions,spend&sort_impressions=DESC&limit=100&format=csv
-```
+<code>https://r.applovin.com/report?api_key=<var>api-key</var>&start=2017-05-01&end=2017-05-01&report_type=dsp_report&columns=platform,country,impressions,spend&sort_impressions=DESC&limit=100&format=csv</code>
 
 ### Required Parameters
 
