--- a/src/content/docs/en/api/20_demand-partners/10_demand-side-platforms/50_viewability.mdx
+++ b/src/content/docs/en/api/20_demand-partners/10_demand-side-platforms/50_viewability.mdx
@@ -17,7 +17,7 @@ The formats supported on <Abbr>SDK</Abbr> 11.3.0+ are:
 - <Glossary>Rewarded</Glossary> <Abbr>VAST</Abbr> <Abbr>XML</Abbr> and <Abbr>VAST</Abbr> tags
   
 <Callout type="note">
-Please reach out to your third party viewability vendor (including <Abbr>IAS</Abbr> &amp; Moat) to validate your viewability tags before running viewability campaigns through AppLovin.
+Please reach out to your third party viewability vendor (including <Abbr>IAS</Abbr> & Moat) to validate your viewability tags before running viewability campaigns through AppLovin.
 </Callout>
 
 ## Setting Up Viewability Tags
