--- a/src/content/docs/en/api/20_demand-partners/10_demand-side-platforms/60_creative-format-specifications.mdx
+++ b/src/content/docs/en/api/20_demand-partners/10_demand-side-platforms/60_creative-format-specifications.mdx
@@ -34,7 +34,7 @@ AppLovin recommends that you leverage [the testing process](dsp-testing) to full
 - Not supported media <Abbr>MIME</Abbr> types:
   - Flash (`flv`, `swf`) is not supported.
 - Video file size limits:
-  - Max file size (<Abbr>iOS</Abbr> &amp; Android): Recommended 2<Abbr>MB</Abbr> (recommended maximum file size is 10<Abbr>MB</Abbr>).
+  - Max file size (<Abbr>iOS</Abbr> & Android): Recommended 2<Abbr>MB</Abbr> (recommended maximum file size is 10<Abbr>MB</Abbr>).
     Videos that are over 2<Abbr>MB</Abbr> can experience poor performance.
   -   If the request to retrieve the video file exceeds 30 seconds, it is considered a timeout.
 - Both landscape and vertical video are supported.
