--- a/src/content/docs/en/api/20_demand-partners/80_applovin-exchange-and-google-dv360.mdx
+++ b/src/content/docs/en/api/20_demand-partners/80_applovin-exchange-and-google-dv360.mdx
@@ -40,5 +40,5 @@ After you activate <Abbr>ALX</Abbr> in your Google <Abbr>DV360</Abbr> account, s
 1. [Activate inventory source targeting in <Abbr>DV360</Abbr>.](https://support.google.com/displayvideo/answer/2726009?hl=en)
 1. [Add <Abbr>ALX</Abbr> as an inventory source.](https://support.google.com/displayvideo/answer/3423616?hl=en)
 1. Find the deals that you want to run — [Contact exchange@applovin.com](mailto:exchange@applovin.com?subject=ALX%20deals) to learn which deals are available.
-1. [Manage and run your inventory deals.](https://support.google.com/displayvideo/answer/6224774?hl=en&amp;ref_topic=6224744)
+1. [Manage and run your inventory deals.](https://support.google.com/displayvideo/answer/6224774?hl=en&ref_topic=6224744)
 1. [Troubleshoot your deals.](https://support.google.com/displayvideo/answer/6292894#zippy=%2Ctargeting)
