--- a/src/content/docs/en/api/25_adobe-air/10_overview/50_advanced-settings.mdx
+++ b/src/content/docs/en/api/25_adobe-air/10_overview/50_advanced-settings.mdx
@@ -12,23 +12,23 @@ import VerboseLogging from "@content/en/api/partials/_VerboseLogging.mdx";
 ### Banners
 ```actionscript-3
 AppLovinMAX.createBanner(bannerAdUnitId, AdViewPosition.BOTTOM_CENTER);
-AppLovinMAX.setBannerPlacement(bannerAdUnitId, <var>placement</var>);
+AppLovinMAX.setBannerPlacement(bannerAdUnitId, «placement»);
 ```
 
 ### MRECs
 ```actionscript-3
 AppLovinMAX.createMRec(mrecAdUnitId, AdViewPosition.CENTERED);
-AppLovinMAX.setMRecPlacement(mrecAdUnitId, <var>placement</var>);
+AppLovinMAX.setMRecPlacement(mrecAdUnitId, «placement»);
 ```
 
 ### Interstitials
 ```actionscript-3
-AppLovinMAX.showInterstitial(interstitialAdUnitId, <var>placement</var>);
+AppLovinMAX.showInterstitial(interstitialAdUnitId, «placement»);
 ```
 
 ### Rewarded Ads
 ```actionscript-3
-AppLovinMAX.showRewardedAd(rewardedAdUnitId, <var>placement</var>);
+AppLovinMAX.showRewardedAd(rewardedAdUnitId, «placement»);
 ```
 
 <MuteAudio />
