--- a/src/content/docs/en/api/25_adobe-air/20_ad-formats/10_banner-and-mrec-ads.mdx
+++ b/src/content/docs/en/api/25_adobe-air/20_ad-formats/10_banner-and-mrec-ads.mdx
@@ -17,7 +17,7 @@ To load a banner or <Abbr>MREC</Abbr>, call `createBanner()` or `createMRec()`, 
 ### Banners
 
 ```actionscript-3
-var adUnitId:String = "<var>ad_unit_ID</var>";
+var adUnitId:String = "«ad_unit_ID»";
 
 public function initializeAd():void
 {
@@ -33,7 +33,7 @@ public function initializeAd():void
 ### <Abbr>MRECs</Abbr>
 
 ```actionscript-3
-var adUnitId:String = "<var>ad_unit_ID</var>";
+var adUnitId:String = "«ad_unit_ID»";
 
 public function initializeAd():void
 {
