--- a/src/content/docs/en/api/25_adobe-air/20_ad-formats/20_interstitial-ads.mdx
+++ b/src/content/docs/en/api/25_adobe-air/20_ad-formats/20_interstitial-ads.mdx
@@ -11,7 +11,7 @@ The following sections show you how to load and then show an <Glossary>interstit
 The following code shows you how to attach event listeners and load the first interstitial:
 
 ```actionscript-3
-var interstitialAdUnitId:String = "<var>ad_unit_ID</var>";
+var interstitialAdUnitId:String = "«ad_unit_ID»";
 var retryAttempt:Number;
 
 public function initializeInterstitialAds():void
