--- a/src/content/docs/en/api/partials/_EnablingGoogleUMP.mdx
+++ b/src/content/docs/en/api/partials/_EnablingGoogleUMP.mdx
@@ -7,7 +7,7 @@ To do so:
 
 1. Sign in to your AdMob account at [apps.admob.com](https://apps.admob.com).
    * Add your apps to the AdMob dashboard, if you have not done so already.
-1. Click <UILabel>Privacy &amp; messaging</UILabel>.
+1. Click <UILabel>Privacy & messaging</UILabel>.
 1. Click <UILabel>GDPR</UILabel>.
 1. Click <UILabel>Create message</UILabel>.
    The <UILabel>GDPR message</UILabel> page opens.
@@ -24,7 +24,7 @@ To do so:
 1. Click <UILabel>Continue</UILabel>.
    The <UILabel>Edit message</UILabel> page opens.
 1. In the <UILabel>Message name</UILabel> field, enter a descriptive message name to help you identify the message later.
-   This name appears only on the <UILabel>Privacy &amp; messaging</UILabel> page and is not visible to users.
+   This name appears only on the <UILabel>Privacy & messaging</UILabel> page and is not visible to users.
 1. Select the <UILabel>Styling</UILabel> tab.
    1. Under the <UILabel>Global</UILabel> section, set the <UILabel>Secondary color</UILabel> to white (`#ffffff`).
    1. Under the <UILabel>Buttons</UILabel> section, set the <UILabel>Secondary color</UILabel> to gray (`#6e6e6e`).
