--- a/src/content/docs/en/api/partials/_ErrorCodes2.mdx
+++ b/src/content/docs/en/api/partials/_ErrorCodes2.mdx
@@ -2,29 +2,29 @@
 
 To better understand the error codes that various ad networks return, see the error documentation pages published by those networks:
 
-- [BidMachine (Android)](https://github.com/bidmachine/BidMachine-Android-SDK/blob/71b885e49357f5e8fd42ef3cc30291134f2d2525/bidmachine/src/main/java/io/bidmachine/utils/BMError.java#L7) &amp; [BidMachine (iOS)](https://github.com/bidmachine/BidMachine-iOS-SDK/blob/e0f7f7d32c8277772cfd4646fa910a2237351c20/BidMachine/BidMachine/BDMDefines.h#L65)
+- [BidMachine (Android)](https://github.com/bidmachine/BidMachine-Android-SDK/blob/71b885e49357f5e8fd42ef3cc30291134f2d2525/bidmachine/src/main/java/io/bidmachine/utils/BMError.java#L7) & [BidMachine (iOS)](https://github.com/bidmachine/BidMachine-iOS-SDK/blob/e0f7f7d32c8277772cfd4646fa910a2237351c20/BidMachine/BidMachine/BDMDefines.h#L65)
 - [Chartboost](https://answers.chartboost.com/en-us/articles/204377039) 
 - [DT Exchange](https://developer.fyber.com/hc/en-us/articles/360011618158-SDK-init#callback-completion-error-codes-0-2) 
-- [Google bidding and Google AdMob (Android)](https://developers.google.com/android/reference/com/google/android/gms/ads/AdRequest#ERROR_CODE_INTERNAL_ERROR) &amp; [Google bidding and Google AdMob (iOS)](https://developers.google.com/admob/ios/api/reference/Enums/GADErrorCode)
+- [Google bidding and Google AdMob (Android)](https://developers.google.com/android/reference/com/google/android/gms/ads/AdRequest#ERROR_CODE_INTERNAL_ERROR) & [Google bidding and Google AdMob (iOS)](https://developers.google.com/admob/ios/api/reference/Enums/GADErrorCode)
 - [InMobi](https://support.inmobi.com/monetize/best-practices/advertiser-reporting-api-guide-v1.0/#page__error-codes)
-- [ironSource (Android)](https://developers.ironsrc.com/ironsource-mobile/Android/supersonic-sdk-error-codes/) &amp; [ironSource (iOS)](https://developers.ironsrc.com/ironsource-mobile/ios/supersonic-sdk-error-codes/)
-- [Line (Android)](https://developers.line.biz/en/docs/android-sdk/handling-errors/) &amp; [Line (iOS)](https://developers.line.biz/en/docs/ios-sdk/objective-c/error-handling/) ([also](https://developers.line.biz/en/reference/ios-sdk-swift/Enums/LineSDKError.html))
-- [Maio (Android)](https://github.com/imobile-maio/maio-Android-SDK/wiki/API-Reference-(EN)#failnotificationreason-enum-1) &amp; [Maio (iOS)](https://github.com/imobile-maio/maio-iOS-SDK/blob/master/Maio.framework/Headers/MaioDelegate.h) 
+- [ironSource (Android)](https://developers.ironsrc.com/ironsource-mobile/Android/supersonic-sdk-error-codes/) & [ironSource (iOS)](https://developers.ironsrc.com/ironsource-mobile/ios/supersonic-sdk-error-codes/)
+- [Line (Android)](https://developers.line.biz/en/docs/android-sdk/handling-errors/) & [Line (iOS)](https://developers.line.biz/en/docs/ios-sdk/objective-c/error-handling/) ([also](https://developers.line.biz/en/reference/ios-sdk-swift/Enums/LineSDKError.html))
+- [Maio (Android)](https://github.com/imobile-maio/maio-Android-SDK/wiki/API-Reference-(EN)#failnotificationreason-enum-1) & [Maio (iOS)](https://github.com/imobile-maio/maio-iOS-SDK/blob/master/Maio.framework/Headers/MaioDelegate.h) 
 - [Meta Audience Network](https://developers.facebook.com/docs/audience-network/setting-up/test/checklist-errors/) 
 - [Mintegral](https://adv-new.mintegral.com/doc/en/appendix/error) 
 - [MoPub](https://developers.mopub.com/publishers/reference/android/MoPubErrorCode/) 
-- [Nend — banner ads (Android)](https://github.com/fan-ADN/nendSDK-Android/wiki/Implementation-for-banner-ads#content-of-enum-nenderror) &amp; [Nend — banner ads (iOS)](https://github.com/fan-ADN/nendSDK-iOS/wiki/Implementation-for-banner-ads#details-of-nadviewerrorcode-nadviewnserrorcode) 
+- [Nend — banner ads (Android)](https://github.com/fan-ADN/nendSDK-Android/wiki/Implementation-for-banner-ads#content-of-enum-nenderror) & [Nend — banner ads (iOS)](https://github.com/fan-ADN/nendSDK-iOS/wiki/Implementation-for-banner-ads#details-of-nadviewerrorcode-nadviewnserrorcode) 
 - [Nend — icon ads (Android)](https://github.com/fan-ADN/nendSDK-Android/wiki/Implementation-for-icon-ads#receiving-error-notification) 
 - [Nend — video ads (Android)](https://github.com/fan-ADN/nendSDK-Android/wiki/Implementation-for-video-ads#acquire-error-information) 
 - [Nend — native ads (Android)](https://github.com/fan-ADN/nendSDK-Android/wiki/Implementation-for-native-ads) 
 - [Nend — rewarded video ads (iOS)](https://github.com/fan-ADN/nendSDK-iOS/wiki/Implementation-for-Rewarded-Video-ads#loading-of-ad-is-failed) 
 - [Nend — interstitial video ads (iOS)](https://github.com/fan-ADN/nendSDK-iOS/wiki/Implementation-for-Interstitial-Video-ads#loading-of-ad-is-failed) 
 - [Nend — native video ads (iOS)](https://github.com/fan-ADN/nendSDK-iOS/wiki/Implementation-for-native-video-ads#loading-ad) 
-- [Ogury — interstitial ads (Android)](https://ogury-ltd.gitbook.io/android/ad-formats/interstitial-ad#error-codes) &amp; [Ogury — interstitial ads (iOS)](https://ogury-ltd.gitbook.io/ios/ad-formats/interstitial-ad#error-codes) 
-- [Ogury — opt-in video ads (Android)](https://ogury-ltd.gitbook.io/android/ad-formats/opt-in-video-ad#error-codes) &amp; [Ogury — opt-in video ads (iOS)](https://ogury-ltd.gitbook.io/ios/ad-formats/opt-in-video-ad#error-codes) 
-- [Ogury — banner ads (Android)](https://ogury-ltd.gitbook.io/android/ad-formats/banner-ad#error-codes) &amp; [Ogury — banner ads (iOS)](https://ogury-ltd.gitbook.io/ios/ad-formats/banner-ad#error-codes) 
-- [Pangle (Android)](https://www.pangleglobal.com/help/doc/6034a6a6511c57004360ff1c) &amp; [Pangle (iOS)](https://www.pangleglobal.com/help/doc/6034aca9511c57004360ff7f) 
-- [Tencent (Android)](https://intl.cloud.tencent.com/jp/document/product/1024/30722) &amp; [Tencent (iOS)](https://intl.cloud.tencent.com/jp/document/product/1024/30731) 
-- [Unity Ads (Android)](https://unityads.unity3d.com/help/android/api-android) &amp; [Unity Ads (iOS)](https://unityads.unity3d.com/help/ios/api-ios) 
+- [Ogury — interstitial ads (Android)](https://ogury-ltd.gitbook.io/android/ad-formats/interstitial-ad#error-codes) & [Ogury — interstitial ads (iOS)](https://ogury-ltd.gitbook.io/ios/ad-formats/interstitial-ad#error-codes) 
+- [Ogury — opt-in video ads (Android)](https://ogury-ltd.gitbook.io/android/ad-formats/opt-in-video-ad#error-codes) & [Ogury — opt-in video ads (iOS)](https://ogury-ltd.gitbook.io/ios/ad-formats/opt-in-video-ad#error-codes) 
+- [Ogury — banner ads (Android)](https://ogury-ltd.gitbook.io/android/ad-formats/banner-ad#error-codes) & [Ogury — banner ads (iOS)](https://ogury-ltd.gitbook.io/ios/ad-formats/banner-ad#error-codes) 
+- [Pangle (Android)](https://www.pangleglobal.com/help/doc/6034a6a6511c57004360ff1c) & [Pangle (iOS)](https://www.pangleglobal.com/help/doc/6034aca9511c57004360ff7f) 
+- [Tencent (Android)](https://intl.cloud.tencent.com/jp/document/product/1024/30722) & [Tencent (iOS)](https://intl.cloud.tencent.com/jp/document/product/1024/30731) 
+- [Unity Ads (Android)](https://unityads.unity3d.com/help/android/api-android) & [Unity Ads (iOS)](https://unityads.unity3d.com/help/ios/api-ios) 
 - [Vungle](https://vungle.github.io/vungle-android-sdk/javadoc/) 
 - [Yandex](https://yandex.com/dev/direct/doc/dg-v4/reference/ErrorCodes.html) 
