--- a/src/content/docs/en/api/30_android/20_ad-formats/20_interstitial-ads.mdx
+++ b/src/content/docs/en/api/30_android/20_ad-formats/20_interstitial-ads.mdx
@@ -18,7 +18,7 @@ public class ExampleActivity extends Activity
 
   void createInterstitialAd()
   {
-    interstitialAd = new MaxInterstitialAd( "<var>ad_unit_ID</var>", this );
+    interstitialAd = new MaxInterstitialAd( "«ad_unit_ID»", this );
     interstitialAd.setListener( this );
 
     // Load the first ad
@@ -85,7 +85,7 @@ class ExampleActivity : Activity(), MaxAdListener
 
   fun createInterstitialAd()
   {
-    interstitialAd = MaxInterstitialAd( "<var>ad_unit_ID</var>", this )
+    interstitialAd = MaxInterstitialAd( "«ad_unit_ID»", this )
     interstitialAd.setListener( this )
 
     // Load the first ad
@@ -175,7 +175,7 @@ public class ExampleActivity extends Activity
 
   void createInterstitialAd()
   {
-    interstitialAd = new MaxInterstitialAd( "<var>ad_unit_ID</var>", this );
+    interstitialAd = new MaxInterstitialAd( "«ad_unit_ID»", this );
     interstitialAd.setExtraParameter( "container_view_ads", "true" );
     interstitialAd.setListener( this );
 
@@ -202,7 +202,7 @@ class ExampleActivity : Activity(), MaxAdListener, LifecycleOwner
 
   fun createInterstitialAd()
   {
-    interstitialAd = MaxInterstitialAd( "<var>ad_unit_ID</var>", this )
+    interstitialAd = MaxInterstitialAd( "«ad_unit_ID»", this )
     interstitialAd.setExtraParameter( "container_view_ads", "true" )
     interstitialAd.setListener( this )
 
