--- a/src/content/docs/en/api/30_android/30_testing-networks/10_max-demo-app.mdx
+++ b/src/content/docs/en/api/30_android/30_testing-networks/10_max-demo-app.mdx
@@ -7,6 +7,10 @@ import MaxDemoApp from "@content/en/api/partials/_MaxDemoApp.mdx";
 
 <MaxDemoApp />
 
-You can find the open-source MAX demo apps in [the AppLovin Adobe AIR repository](https://github.com/AppLovin/AppLovin-MAX-AIR).
-To get started, follow the instructions in [the `README` file](https://github.com/AppLovin/AppLovin-MAX-AIR/blob/master/README.md).
+You can find the open-source MAX demo apps in [the AppLovin Android repository](https://github.com/AppLovin/AppLovin-MAX-SDK-Android).
+To get started, follow the instructions in [the `README` file](https://github.com/AppLovin/AppLovin-MAX-SDK-Android/blob/master/README.md).
 Watch the repository in order to receive the latest notifications on MAX Demo App updates and <Abbr>SDK</Abbr> releases.
+
+|   |   |
+| - | - |
+| ![MAX Demo App: Ad Examples](/images/max-demo-app-01.png) | ![Programmatic Banner Ads](/images/max-demo-app-02.png) |
